# mtop

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  PROGRESS.md  README.md  ]  add-license.sh  bst.c  bst.h  cmake_install.cmake  cmtop  cmtop.c  common.h  compress.py  draw.c  draw.h  error.c  init-cmake.sh  make_compile_commands.sh  mtop.c  mtxline.c  mtxline.h  opt.c  opt.h  proc.c  proc.h  procbst.c  procbst.h  procdraw.c  procdraw.h  proctypes.h  screen.c  testing  testing.c  tty.c  tty.h  xutil.c  xutil.h
display/: CMakeLists.txt  Makefile  cmake_install.cmake  dcolor.c  dcolor.h  dmeter.h  drawbuffer.c  drawbuffer.h  dstring.c  dstring.h  screen.c  screen.h  tty.c  tty.h
process/: CMakeLists.txt  Makefile  cmake_install.cmake  proc.c  proc.h  procbst.c  procbst.h  procdraw.c  procdraw.h  proclist.c  proclist.h  proctypes.h
src/: common.h  draw.c  draw.h  error.c  error.h  mtop.c  opt.c  opt.h  xutil.c  xutil.h
src/display/: CMakeLists.txt  dcolor.c  dcolor.h  dmeter.c  dmeter.h  drawbuffer.c  drawbuffer.h  dstring.c  dstring.h  screen.c  screen.h  tty.c  tty.h
src/process/: CMakeLists.txt  draw.c  draw.h  info.h  proc.c  proc.h  procdraw.c  procdraw.h  proclist.c  proclist.h  proctypes.h
